[package]
name = "selfdriving"
version = "0.1.0"
authors = ["Acshi Haggenmiller <acshikh@umich.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rvx = { path="../rvx" }
rand = "0.8.3"
parry2d-f64 = "0.5.1"
enum_dispatch = "0.3.7"
fstrings = "0.2.3"
approx = "0.5.0"
serde = "1.0.126"
rayon = "1.5.1"
itertools = "0.10.0"
config = "0.11.0"
nalgebra = "0.27.1"

[dev-dependencies]
criterion = "0.3.4"

[[bench]]
name = "benchmark"
harness = false

[profile.release]
debug = true
